set dokan not visible in bundle

--- a/packaging/windows/WIXInstallers/KeybaseBundle/Bundle.wxs
+++ b/packaging/windows/WIXInstallers/KeybaseBundle/Bundle.wxs
@@ -222,7 +222,7 @@
       <MsiPackage SourceFile="$(env.DOKAN_PATH)\dokan_wix\bin\x86\$(var.Configuration)\Dokan_x86.msi"
                   InstallCondition="NOT VersionNT64"
                   Compressed="yes"
-                  Visible="yes"
+                  Visible="no"
                   Permanent="no"
                   >
         <!--<MsiProperty Name="ADDLOCAL" Value="ALL" />-->
@@ -234,7 +234,7 @@
       <MsiPackage SourceFile="$(env.DOKAN_PATH)\dokan_wix\bin\x64\$(var.Configuration)\Dokan_x64.msi"
                   InstallCondition="VersionNT64"
                   Compressed="yes"
-                  Visible="yes"
+                  Visible="no"
                   Permanent="no"
                   >
         <!--<MsiProperty Name="ADDLOCAL" Value="ALL" />-->
