--- a/packaging/windows/WIXInstallers/KeybaseApps/KeybaseApps.wxs
+++ b/packaging/windows/WIXInstallers/KeybaseApps/KeybaseApps.wxs
@@ -145,7 +145,7 @@
         <Shortcut Id="GUIShortCutStartUp" Name="GUIStartup"
                   Description="Start GUI at boot"
                   Target="[INSTALLFOLDER]runquiet.exe"
-                  Arguments="[GuiDir]Keybase.exe"
+                  Arguments="&quot;[GuiDir]Keybase.exe&quot;"
                   WorkingDirectory="INSTALLFOLDER"/>
         <RegistryKey Root="HKCU" Key="Software\Keybase\Keybase">
           <RegistryValue Name="ShortCutStartUpGUI" Type="integer" Value="1" KeyPath="yes"  />
@@ -184,14 +184,14 @@
   <Fragment>
     <CustomAction Id="RunMainApp"
               Directory="INSTALLFOLDER"
-              ExeCommand="[INSTALLFOLDER]runquiet.exe [INSTALLFOLDER]keybase.exe ctl watchdog2"
+              ExeCommand="[INSTALLFOLDER]runquiet.exe &quot;[INSTALLFOLDER]keybase.exe&quot; ctl watchdog2"
               Execute="commit"
               Return="ignore"/>    
   </Fragment>
   <Fragment>
     <CustomAction Id="StopMainApp"
               Directory="INSTALLFOLDER"
-              ExeCommand="[INSTALLFOLDER]runquiet.exe -wait [INSTALLFOLDER]keybase.exe ctl stop"
+              ExeCommand="[INSTALLFOLDER]runquiet.exe -wait &quot;[INSTALLFOLDER]keybase.exe&quot; ctl stop --kill-kbfs"
               Execute="immediate"
               Return="ignore"/>
   </Fragment>
@@ -214,7 +214,7 @@
   <Fragment>
     <CustomAction Id="RunGUI"
               Directory="GuiDir"
-              ExeCommand="[INSTALLFOLDER]runquiet.exe [GuiDir]Keybase.exe"
+              ExeCommand="[INSTALLFOLDER]runquiet.exe &quot;[GuiDir]Keybase.exe&quot;"
               Execute="commit"
               Return="ignore"/>
   </Fragment>
