--- a/packaging/windows/WIXInstallers/KeybaseBundle/Bundle.wxs
+++ b/packaging/windows/WIXInstallers/KeybaseBundle/Bundle.wxs
@@ -6,6 +6,9 @@
   <Bundle Name="Keybase" Version="$(env.KEYBASE_WINVER)" Manufacturer="Keybase, Inc." UpgradeCode="418432ab-0366-40fd-a396-8cc0c4200252">
 
     <Variable Name="DokanInstallFolder" Type="string" Value="[ProgramFiles6432Folder]Dokan\Dokan Library-1.0.0"/>
+    <!-- These match Keybase's Dokany Build 71 Sept 7 2016 -->
+    <Variable Name="DokanProduct86" Type="string" Value="{65A3A986-3DC3-0100-0000-160907182735}"/>
+    <Variable Name="DokanProduct64" Type="string" Value="{65A3A964-3DC3-0100-0000-160907182735}"/>
 
     <Log PathVariable="LOGPATH_PROP"/>
     <util:FileSearchRef Id='WINTRUST_FileSearch' />
@@ -31,7 +34,7 @@
     <util:RegistrySearch Id="DokanUninstall"
              Variable="DokanUninstallString"
              Root="HKLM"
-             Key="SOFTWARE\Microsoft\Windows\CurrentVersion\Uninstall\{65A3A986-3DC3-0100-0000-160803110110}"
+             Key="SOFTWARE\Microsoft\Windows\CurrentVersion\Uninstall\[DokanProduct86]"
              Value="UninstallString"
              Format="raw"
              />
@@ -40,7 +43,7 @@
                  Condition="NOT DokanUninstallString"
                  Variable="DokanUninstallString"
                  Root="HKLM"
-                 Key="SOFTWARE\Microsoft\Windows\CurrentVersion\Uninstall\{65A3A964-3DC3-0100-0000-160803110110}"
+                 Key="SOFTWARE\Microsoft\Windows\CurrentVersion\Uninstall\[DokanProduct64]"
                  Value="UninstallString"
                  Format="raw"
                  Win64="yes"
@@ -241,6 +244,8 @@
                   SourceFile="$(var.KeybaseApps.TargetPath)"
                   DisplayInternalUI='no'
                   Permanent="no">
+        <MsiProperty Name="DOKANPRODUCT86" Value="[DokanProduct86]" />
+        <MsiProperty Name="DOKANPRODUCT64" Value="[DokanProduct64]" />
       </MsiPackage>
 
     </Chain>
@@ -254,7 +259,7 @@
     <!-- check for GDR/LDR version. See https://github.com/dokan-dev/dokany/commit/9782a6491775ef3660a71f40f381d3f48e511f14 -->
     <bal:Condition
       Message="Microsoft patch KB3033929 is not installed. A reboot is needed between the installation of said patch and the installation of Keybase. https://support.microsoft.com/en-us/kb/3033929">
-      <![CDATA[Installed OR VersionNT > v6.1 OR (VersionNT = v6.1 AND ((WINTRUSTVERSION >= v6.1.7601.18741 AND WINTRUSTVERSION <= v6.1.7601.22000) OR WINTRUSTVERSION >= v6.1.7601.22947))]]>
+      <![CDATA[Installed OR VersionNT > v6.1 OR (VersionNT = v6.1 AND ((WINTRUSTVERSION >= v6.1.7601.18741 AND WINTRUSTVERSION < v6.1.7601.22000) OR WINTRUSTVERSION >= v6.1.7601.22948))]]>
     </bal:Condition>
   </Fragment>
   <Fragment>
@@ -277,7 +282,7 @@
           Value="UninstallString" 
           Win64="yes"/>
 
-    <!-- These two are for the most recent KBFS -->
+    <!-- These two are for the older inno based KBFS -->
     <util:RegistrySearch Id="InnoKBFSUninstall"
                  Variable="InnoKBFSUninstallString"
                  Root="HKLM"
