--- a/desktop/renderer/fonticon.css
+++ b/desktop/renderer/fonticon.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'kb';
   src:
-    url('fonts/kb.ttf?71vw0s') format('truetype'),
-    url('fonts/kb.woff?71vw0s') format('woff'),
-    url('fonts/kb.svg?71vw0s#kb') format('svg');
+    url('fonts/kb.ttf?wveoxq') format('truetype'),
+    url('fonts/kb.woff?wveoxq') format('woff'),
+    url('fonts/kb.svg?wveoxq#kb') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -28,6 +28,24 @@
 }
 .icon-kb-iconfont-caret-right:before {
   content: "\e901";
+}
+.icon-kb-iconfont-star:before {
+  content: "\e928";
+}
+.icon-kb-iconfont-search_2:before {
+  content: "\e929";
+}
+.icon-kb-iconfont-identity-coinbase:before {
+  content: "\e92a";
+}
+.icon-kb-iconfont-folder-visible:before {
+  content: "\e92b";
+}
+.icon-kb-iconfont-folder-hidden:before {
+  content: "\e92c";
+}
+.icon-kb-iconfont-exclamation:before {
+  content: "\e92d";
 }
 .icon-kb-iconfont-identity-facebook:before {
   content: "\e927";
@@ -109,6 +127,9 @@
 }
 .icon-kb-iconfont-lock:before {
   content: "\e925";
+}
+.icon-kb-iconfont-nav-search:before {
+  content: "\e92e";
 }
 .icon-kb-iconfont-proof-placeholder:before {
   content: "\e926";
