--- a/packaging/windows/WIXInstallers/KeybaseBundle/Bundle.wxs
+++ b/packaging/windows/WIXInstallers/KeybaseBundle/Bundle.wxs
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated during build -->
+<?include "..\dokanver.xml"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi"
      xmlns:bal="http://schemas.microsoft.com/wix/BalExtension"
      xmlns:util="http://schemas.microsoft.com/wix/UtilExtension"
@@ -34,7 +36,7 @@
     <util:RegistrySearch Id="DokanUninstall"
              Variable="DokanUninstallString"
              Root="HKLM"
-             Key="SOFTWARE\Microsoft\Windows\CurrentVersion\Uninstall\[DokanProduct86]"
+             Key="SOFTWARE\Microsoft\Windows\CurrentVersion\Uninstall\[$(var.DokanProductCodeX86)]"
              Value="UninstallString"
              Format="raw"
              />
@@ -43,7 +45,7 @@
                  Condition="NOT DokanUninstallString"
                  Variable="DokanUninstallString"
                  Root="HKLM"
-                 Key="SOFTWARE\Microsoft\Windows\CurrentVersion\Uninstall\[DokanProduct64]"
+                 Key="SOFTWARE\Microsoft\Windows\CurrentVersion\Uninstall\[$(var.DokanProductCodeX64)]"
                  Value="UninstallString"
                  Format="raw"
                  Win64="yes"
@@ -216,7 +218,7 @@
                   DownloadUrl="https://download.microsoft.com/download/9/6/F/96FD0525-3DDF-423D-8845-5F92F4A6883E/Windows8.1-KB2999226-x64.msu"
                   />
 
-      <MsiPackage SourceFile="$(env.DOKAN_PATH)\dokan_wix\bin\x86\$(var.Configuration)\Dokan_x86.msi"
+      <MsiPackage SourceFile="$(var.DOKAN_PATH)\dokan_wix\bin\x86\$(var.Configuration)\Dokan_x86.msi"
                   InstallCondition="NOT VersionNT64"
                   Compressed="yes"
                   Visible="yes"
@@ -228,7 +230,7 @@
         <MsiProperty Name="INSTALLDEVFILES" Value="0" />
       </MsiPackage>
 
-      <MsiPackage SourceFile="$(env.DOKAN_PATH)\dokan_wix\bin\x64\$(var.Configuration)\Dokan_x64.msi"
+      <MsiPackage SourceFile="$(var.DOKAN_PATH)\dokan_wix\bin\x64\$(var.Configuration)\Dokan_x64.msi"
                   InstallCondition="VersionNT64"
                   Compressed="yes"
                   Visible="yes"
@@ -244,8 +246,8 @@
                   SourceFile="$(var.KeybaseApps.TargetPath)"
                   DisplayInternalUI='no'
                   Permanent="no">
-        <MsiProperty Name="DOKANPRODUCT86" Value="[DokanProduct86]" />
-        <MsiProperty Name="DOKANPRODUCT64" Value="[DokanProduct64]" />
+        <MsiProperty Name="DOKANPRODUCT86" Value="[$(var.DokanProductCodeX86)]" />
+        <MsiProperty Name="DOKANPRODUCT64" Value="[$(var.DokanProductCodeX64)]" />
       </MsiPackage>
 
     </Chain>
