bad variable syntax

--- a/packaging/windows/WIXInstallers/KeybaseBundle/Bundle.wxs
+++ b/packaging/windows/WIXInstallers/KeybaseBundle/Bundle.wxs
@@ -8,9 +8,6 @@
   <Bundle Name="Keybase" Version="$(env.KEYBASE_WINVER)" Manufacturer="Keybase, Inc." UpgradeCode="418432ab-0366-40fd-a396-8cc0c4200252">
 
     <Variable Name="DokanInstallFolder" Type="string" Value="[ProgramFiles6432Folder]Dokan\Dokan Library-1.0.0"/>
-    <!-- These match Keybase's Dokany Build 71 Sept 7 2016 -->
-    <Variable Name="DokanProduct86" Type="string" Value="{65A3A986-3DC3-0100-0000-160907182735}"/>
-    <Variable Name="DokanProduct64" Type="string" Value="{65A3A964-3DC3-0100-0000-160907182735}"/>
 
     <Log PathVariable="LOGPATH_PROP"/>
     <util:FileSearchRef Id='WINTRUST_FileSearch' />
@@ -36,7 +33,7 @@
     <util:RegistrySearch Id="DokanUninstall"
              Variable="DokanUninstallString"
              Root="HKLM"
-             Key="SOFTWARE\Microsoft\Windows\CurrentVersion\Uninstall\[$(var.DokanProductCodeX86)]"
+             Key="SOFTWARE\Microsoft\Windows\CurrentVersion\Uninstall\$(var.DokanProductCodeX86)"
              Value="UninstallString"
              Format="raw"
              />
@@ -45,7 +42,7 @@
                  Condition="NOT DokanUninstallString"
                  Variable="DokanUninstallString"
                  Root="HKLM"
-                 Key="SOFTWARE\Microsoft\Windows\CurrentVersion\Uninstall\[$(var.DokanProductCodeX64)]"
+                 Key="SOFTWARE\Microsoft\Windows\CurrentVersion\Uninstall\$(var.DokanProductCodeX64)"
                  Value="UninstallString"
                  Format="raw"
                  Win64="yes"
@@ -246,8 +243,8 @@
                   SourceFile="$(var.KeybaseApps.TargetPath)"
                   DisplayInternalUI='no'
                   Permanent="no">
-        <MsiProperty Name="DOKANPRODUCT86" Value="[$(var.DokanProductCodeX86)]" />
-        <MsiProperty Name="DOKANPRODUCT64" Value="[$(var.DokanProductCodeX64)]" />
+        <MsiProperty Name="DOKANPRODUCT86" Value="$(var.DokanProductCodeX86)" />
+        <MsiProperty Name="DOKANPRODUCT64" Value="$(var.DokanProductCodeX64)" />
       </MsiPackage>
 
     </Chain>
