Windows: Repairman to move from roaming to local

--- a/packaging/windows/WIXInstallers/KeybaseApps/KeybaseApps.wxs
+++ b/packaging/windows/WIXInstallers/KeybaseApps/KeybaseApps.wxs
@@ -52,7 +52,7 @@
   </Product>
   <Fragment>
 		<Directory Id="TARGETDIR" Name="SourceDir">
-			<Directory Id="AppDataFolder">
+			<Directory Id="LocalAppDataFolder">
         <Directory Id="INSTALLFOLDER" Name="Keybase">
           <Directory Id="PROMPTERFOLDER" Name="prompter"/>
         </Directory>
